# seldom_state

./: Cargo.toml
examples/: input.rs
src/: lib.rs  trigger.rs
src/trigger/: input.rs
