[package]
name = "seldom_state"
version = "0.10.0"
edition = "2021"
categories = ["game-development"]
description = "Component-based state machine plugin for Bevy. Useful for AI, player state, and other entities that occupy various states."
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "ai", "state-machine"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ka-de/seldom_state"

[features]
leafwing_input = ["dep:input-manager"]

[dependencies]
bevy = { version = "0.13.2", default-features = false }
either = "1.9"
input-manager = { git = "https://github.com/ka-de/input-manager", rev = "bac1c135", default-features = false, optional = true }
seldom_fn_plugin = "0.6.0"

[dev-dependencies]
bevy = "0.13.2"
input-manager = { git = "https://github.com/ka-de/input-manager", rev = "bac1c135" }

[[example]]
name = "input"
required-features = ["leafwing_input"]

[package.metadata.docs.rs]
all-features = true
